changed text color

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,6 @@
  body {
     background-color: #000;
-    color: #FF1616;
+    color: #fff;
     background-image: url("../img/bg.png");
    background-size: cover;
   background-repeat: no-repeat;
