--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,20 +1,27 @@
- body {
-    background-color: #000;
-    color: #fff;
-    background-image: url("../img/bg.png");
-   background-size: cover;
-  background-repeat: no-repeat;
-    background-position: center;
-   font-family: SequelSans-Bold, Arial;
-    }
-.content {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
+body {
+	background-color: #000;
+	color: #fff;
+	background-image: url("../img/bg.png");
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+	font-family: SequelSans-Bold, Arial;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	-o-user-select: none;
+	user-select: none;
 }
-  .logo {
-  font-size: 60px;
-  margin-bottom: 0;
-  }
+.content {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	text-align: center;
+}
+.logo {
+	font-size: 60px;
+	margin-bottom: 0;
+}
